@@ -57,8 +57,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>17</release>
                 </configuration>
             </plugin>
 
@@ -69,12 +68,6 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.mdi.App</mainClass>
-                    <jvmArgs>
-                        --module-path
-                        /usr/share/openjfx/lib
-                        --add-modules
-                        javafx.controls,javafx.fxml
-                    </jvmArgs>
                 </configuration>
             </plugin>
 
